--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Dpchrist::Directory - utility subroutines for directories
 
 DESCRIPTION
-    This documentation describes module revision $Revision: 1.15 $.
+    This documentation describes module revision $Revision: 1.16 $.
 
     This is alpha test level software and may change or disappear at any
     time.
@@ -49,8 +49,6 @@ DESCRIPTION
 
         use Dpchrist::Debug         qw( :all );
 
-    See 'perldoc Export' for everything in between.
-
 INSTALLATION
     Old school:
 
@@ -67,12 +65,7 @@ INSTALLATION
 
         $ cpan Bundle::Dpchrist
 
-    The following warning may be safely ignored:
-
-        Can't locate Dpchrist/Module/MakefilePL.pm in @INC (@INC contains: /
-        etc/perl /usr/local/lib/perl/5.10.0 /usr/local/share/perl/5.10.0 /us
-        r/lib/perl5 /usr/share/perl5 /usr/lib/perl/5.10 /usr/share/perl/5.10
-        /usr/local/lib/site_perl .) at Makefile.PL line 22.
+    The following warnings should not prevent installation:
 
   PREREQUISITES
     See Makefile.PL in the source distribution root directory.
